fixed layout issues

--- a/src/styles/layout/_hero-header.scss
+++ b/src/styles/layout/_hero-header.scss
@@ -41,7 +41,7 @@
     left: 50%;
     transform: translateX(-50%);
     height: 1px;
-    width: 100vw;
+    width: 100%;
     z-index: 10;
     background: linear-gradient(to right, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.05) 25%, rgba(0, 0, 0, 0.01) 75%, rgba(0, 0, 0, 0.1) 100%);
 }
